@@ -1165,16 +1165,14 @@ select {
     @include transition(background-color 0.2s ease);
 }
 
-input[type=submit],
-input[type=reset],
-input[type=button],
-.button,
-button {
-    // @include transition(background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease);
-}
-
 .help {
     @include transition(opacity 0.2s ease);
+}
+
+.label-uppercase {
+    .field > label {
+        text-transform: uppercase;
+    }
 }
 
 @include media-breakpoint-up(sm) {
