@@ -19,6 +19,8 @@
 @import 'wagtailadmin/scss/components/tooltips';
 @import 'wagtailadmin/scss/components/logo';
 
+@import 'wagtailadmin/scss/utilities';
+
 @import 'wagtailadmin/scss/fonts';
 
 @import '../../../../../client/scss/styles';
